<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/form_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/form_name">

    </EditText>

    <DatePicker
        android:id="@+id/form_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_name"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp">

    </DatePicker>

    <EditText
        android:id="@+id/form_tel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/form_tel"
        android:layout_marginTop="10dp">

    </EditText>

    <EditText
        android:id="@+id/form_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_tel"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/form_email">

    </EditText>
    <TextView
        android:id="@+id/label_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_email"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"

        android:hint="@string/form_desc">

    </TextView>
    <EditText
        android:id="@+id/form_desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_desc"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="30dp">

    </EditText>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/form_desc"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next"
        android:theme="@style/RaisedButton"
        >

    </Button>


</LinearLayout>